--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>React App</title>
-    <script src="script/jquery-3.1.1.min.js"></script>
-    <script src="script/materialize.min.js"></script>
-    <link href="content/materialize/css/materialize.min.css" rel="stylesheet" />
-    <link href="content/style.css" rel="stylesheet" />
+    <script src="../script/jquery-3.1.1.min.js"></script>
+    <script src="../script/materialize.min.js"></script>
+    <link href="../content/materialize/css/materialize.min.css" rel="stylesheet" />
+    <link href="../content/style.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
